samples/_failures_safe/1761248833_9d8d38_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9a2e7b09.c:96: error: expected ‘}’ at end of input
./samples/SAFE/__tmp_9a2e7b09.c:27:28: note: to match this ‘{’
   27 | Transition transitions[] = {
      |                            ^
